# portfolio-manager

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CASH_MANAGEMENT_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.MD  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILES_TO_KEEP_OR_DISCARD.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_FRONTEND_PARITY_PLAN.md  PROJECT_STATUS.md  QUICK_START.md  RAILWAY_CONFIG.md  README.md  README_UPDATES.md  SETUP_INSTRUCTIONS.md  advanced_features_demo.py  advanced_features_script.py  comprehensive_feature_test.py  deploy.py  migrate_notebooks.py  negative.py  organize_notebooks.py  package-lock.json  podman-compose.yml  portfolio.csv  portfolio_backup.sql  prereq_output.json  pyproject.toml  railway-frontend.toml  railway.toml  setup.py  setup_local_venv.sh  start.bat  start.sh
.claude/: launch.json  settings.local.json
.github/: copilot-instructions.md
.github/chatmodels/: ds-categorical-analysis.chatmode.md  ds-create.chatmode.md
.github/workflows/: build.yml  ci.yml  publish.yml
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1
.specify/templates/: plan-template.md
backend/: .env.example  .railway-trigger  Containerfile  Dockerfile  MCP_README.md  advanced_features_demo.py  check_db.py  check_sells.py  create_railway_superuser.py  create_superuser.py  create_tables.py  healthcheck.sh  main.py  migrate_add_cash_balance.py  migrate_asset_id.py  migrate_mcp_api_keys.py  migrate_realized_gains.py  migrate_to_supabase.py  pytest.ini  requirements.txt  setup_railway_user.py  sync_redis.py  test_api.py  upload_db.py  warm_cache.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  redis_client.py  security.py
backend/app/crud/: __init__.py  asset.py  holding.py  holding_extended.py  mcp_api_key.py  portfolio.py  portfolio_extended.py  transaction.py  user.py  user_extended.py
backend/app/mcp/: __init__.py  auth.py  config.py  constants.py  default_capabilities.json  errors.py  example_capabilities.yaml  handlers.py  logging_utils.py  models.py  registry.py  router.py  session_store.py
backend/app/models/: __init__.py  asset.py  database.py  holding.py  mcp_api_key.py  portfolio.py  transaction.py  user.py
backend/app/schemas/: __init__.py  analysis.py  asset.py  auth.py  chat.py  holding.py  holding_extended.py  mcp_api_key.py  portfolio.py  portfolio_extended.py  transaction.py  user.py
backend/app/services/: __init__.py  chat_service.py  exchange_rate_service.py  finance_service.py  finnhub_service.py  market_websocket.py  mcp_server.py  portfolio_analysis.py  portfolio_period_service.py  portfolio_ytd.py
backend/app/tests/: test_chat_api.py  test_chat_service.py  test_mcp_tools.py
backend/app/utils/: dependencies.py
backend/models/: __init__.py  database.py
backend/notebooks/: portfolio_book.py
backend/portfolio_manager/: __init__.py
backend/scripts/: mcp_client_demo.py
backend/tests/: conftest.py  test_auth_bootstrap.py  test_cash_balance_transactions.py  test_chat_service.py  test_finance_service.py  test_market_ytd.py  test_mcp_tools.py  test_portfolio_period_service.py  test_portfolio_summary_live.py  test_portfolio_ytd.py
dashboard/: app.js  index.html  style.css
docs/: CHAT_FEATURE.md  NOTEBOOK_ORGANIZATION_GUIDE.md
docs/notebooks/: lab_101.ipynb  lab_102.ipynb  lab_103.ipynb  lab_105.ipynb  lab_106.ipynb  lab_107.ipynb  lab_108.ipynb  lab_109.ipynb  lab_110.ipynb  lab_111.ipynb  lab_118.ipynb  lab_119.ipynb  lab_121.ipynb  lab_122.ipynb  lab_123.ipynb  lab_124.ipynb  lab_125.ipynb  lab_126.ipynb
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
examples/: basic_portfolio_example.py  portfolio_with_cash_example.py
frontend/: .env.local  .railway-trigger  Containerfile  Dockerfile  generate-icons.js  index.html  nginx.conf  package-lock.json  package.json  railway.toml  setupTests.js  tailwind.config.js  vite.config.js
frontend/dev-dist/: sw.js  workbox-0d7dea0d.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  index.css  main.jsx
notebooks/: README.md  advanced_features_demo.ipynb  portfolio_manager_demo.ipynb
specs/001-build-a-landing/: spec.md
specs/002-build-a-landing/: plan.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_asset.py  test_data_providers.py  test_optimization.py  test_performance.py  test_portfolio.py  test_risk.py
(+135 files in other folders)
