[project]
name = "portfolio-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "bcrypt==3.2.0",
    "email-validator>=2.0.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "websocket-client>=1.8.0",
    "yfinance>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
